--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">CryptoApplication</string>
+    <string name="enter_the_amount">Enter the amount</string>
+    <string name="add">Add</string>
+    <string name="groceries">Groceries</string>
+    <string name="taxi">Taxi</string>
+    <string name="electronics">Electronics</string>
+    <string name="restaurant">Restaurant</string>
+    <string name="other">Other</string>
+    <string name="add_transaction">Add transaction</string>
+    <string name="cancel">Cancel</string>
+    <string name="add_balance">Add balance</string>
 </resources>
